--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>Nhat-nguyen.github.io by nhat-nguyen</title>
+    <title>nhat-nguyen.github.io by nhat-nguyen</title>
   </head>
 
   <body>
@@ -27,7 +27,7 @@
       <header>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <h1>Nhat-nguyen.github.io</h1>
+            <h1>nhat-nguyen.github.io</h1>
             <h2></h2>
           </span>
           <span class="left-tail"></span>
