--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   height: 300px;
   background-repeat: no-repeat;
   background-size: cover;
+  padding: 10px;
 }
     .jumbotron .container {
       color: #ffffff;
