--- a/index.html
+++ b/index.html
@@ -29,18 +29,18 @@
     </div> 
     <div class="neighborhood-guides">
       <div class="container">
-        <h2>Neighborhood Guides</h2>
-        <p>Not sure where to stay? We've created neighborhood guides for cities all around the world.</p>
+        <h2>My Life</h2>
+        <p>Here's something about me; what I do, and what I love</p>
         <div class="row">
         
           <div class="col-md-6">
             <div class="thumbnail">
-              <img src="https://dl.dropboxusercontent.com/u/12339150/Website%20Resources/Projects.png" class="img-responsive" alt="Responsive image">
+              <img src="https://dl.dropboxusercontent.com/u/12339150/Website%20Resources/Projects.jpg" class="img-responsive" alt="Responsive image">
             </div>
           </div>
           <div class="col-md-6">
             <div class="thumbnail">
-              <img src="https://dl.dropboxusercontent.com/u/12339150/Website%20Resources/Hobbies.png" class="img-responsive" alt="Responsive image">
+              <img src="https://dl.dropboxusercontent.com/u/12339150/Website%20Resources/Hobbies.jpg" class="img-responsive" alt="Responsive image">
             </div>
           </div>
     <div class="learn-more">
