--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
   <head>
     <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="main.css">
@@ -23,7 +22,10 @@
     <div class="jumbotron">
       <div class="container">
         <h1>Nhat Nguyen</h1>
-        <p>A software lover and passionate photographer</p>
+        <ul>
+           <li><p>software lover </p></li>
+           <li><p>passionate photographer</p></li>
+	</ul>
         <a href="#">More about me</a>
       </div>
     </div> 
