--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
     <div class="jumbotron">
       <div class="container">
         <h1>Nhat Nguyen</h1>
-        <ul>
-           <li><p>software lover </p></li>
-           <li><p>passionate photographer</p></li>
-	</ul>
+           <p>software lover</p>
+           passionate photographer</p>
+	   </p>
         <a href="#">More about me</a>
       </div>
     </div> 
