--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
     <div class="jumbotron">
       <div class="container">
         <h1>Nhat Nguyen</h1>
-           <p>software lover</p>
+           <p>software lover
            passionate photographer</p>
-	   </p>
         <a href="#">More about me</a>
       </div>
     </div> 
