--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
     <div class="jumbotron">
       <div class="container">
         <h1>Nhat Nguyen</h1>
-           <p>software lover
-           passionate photographer</p>
+           <p>software lover. passionate photographer</p>
         <a href="#">More about me</a>
       </div>
     </div> 
