updated project page

--- a/index.html
+++ b/index.html
@@ -23,18 +23,15 @@
       <div class="container">
         <h1>Nhat Nguyen</h1>
            <p>software lover. passionate photographer</p>
-        <a href="#">More about me</a>
       </div>
     </div> 
     <div class="showcase">
       <div class="container">
-        <h2>My Life</h2>
-        <p>Here's something about me; what I do, and what I love</p>
         <div class="row">
         
           <div class="col-md-6">
             <div class="thumbnail">
-              <img src="https://dl.dropboxusercontent.com/u/12339150/Website%20Resources/Projects.jpg" class="img-responsive" alt="Responsive image">
+              <a href="project.html"><img src="https://dl.dropboxusercontent.com/u/12339150/Website%20Resources/Projects.jpg" class="img-responsive" alt="Responsive image"></a>
             </div>
           </div>
           <div class="col-md-6">
@@ -42,21 +39,20 @@
               <img src="https://dl.dropboxusercontent.com/u/12339150/Website%20Resources/Hobbies.jpg" class="img-responsive" alt="Responsive image">
             </div>
           </div>
+        </div>
+      </div>
+    </div>
+    
     <div class="learn-more">
 	  <div class="container">
 		<div class="row">
-	      <div class="col-md-4">
+	      <div class="col-md-6">
 			<h3>1</h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 			<p><a href="#">Learn more</a></p>
 	      </div>
-		  <div class="col-md-4">
+		  <div class="col-md-6">
 			<h3>2</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			<p><a href="#">Learn more</a></p>
-		  </div>
-		  <div class="col-md-4">
-			<h3>3</h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 			<p><a href="#">Learn more</a></p>
 		  </div>
