--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <!-- Make sure the <html> tag is set to the .full CSS class. Change the background image in the full.css file. -->
 
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -40,7 +39,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"> <img src="assets/icon.png">Home</a>
+                <a class="navbar-brand" href="index.html">Home</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -70,7 +69,7 @@
             <div class="row">
                 <div class="col-md-12 col-sm-12">
                     <h1>Nhat Nguyen</h1>
-                    <p>I'm a Software Engineering student at the University of Waterloo. I have great interest in developing and learning about software.Outside of classes, I usually spend time learning about software development, programming languages and photography.</p>
+                    <p>I'm a Software Engineering student at the University of Waterloo. I have great interest in developing and learning about software. Outside of classes, I usually spend time learning about software development, programming languages and photography.</p>
                     <p></p>
                     <p></p>
                 </div>
@@ -81,10 +80,12 @@
     <div class="showcase">
         <div class="container">
             <ul>
-                <li><a href="project.html">Projects</a></li>
-                <li><a href="photography.html">Photography</a></li>
-                <li><a href="about.html">More about me</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="projects.html"><img src="assets/projects.png">Projects</a></li>
+                <li><a href="photography.html"><img src="assets/photo.png">Photography</a></li>
+                <li><a href="contact.html"><img src="assets/contact.png">Contact</a></li>
+                <li><a href="resume.pdf"><img src="assets/resume.png">Resume</a></li>
+                <li><a href="about.html"><img src="assets/about.png">About</a></li>
+
             </ul>
         
         </div>
