--- a/index.html
+++ b/index.html
@@ -83,9 +83,8 @@
                 <li><a href="projects.html"><img src="assets/projects.png">Projects</a></li>
                 <li><a href="photography.html"><img src="assets/photo.png">Photography</a></li>
                 <li><a href="contact.html"><img src="assets/contact.png">Contact</a></li>
-                <li><a href="resume.pdf"><img src="assets/resume.png">Resume</a></li>
+                <li><a href="assets/resume.pdf"><img src="assets/resume.png">Resume</a></li>
                 <li><a href="about.html"><img src="assets/about.png">About</a></li>
-
             </ul>
         
         </div>
