completed the new design

--- a/contact.html
+++ b/contact.html
@@ -9,13 +9,15 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Nhat Nguyen</title>
+    <title>Contact</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="css/main.css" rel="stylesheet">
+    <link href="css/contact.css" rel="stylesheet">
+
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -50,9 +52,11 @@
                     <li>
                         <a href="photography.html">Photography</a>
                     </li>
+<!--
                     <li>
                         <a href="about.html">About</a>
                     </li>
+-->
                     <li>
                         <a href="contact.html">Contact</a>
                     </li>
@@ -68,23 +72,19 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 col-sm-12">
-                    <h1>Nhat Nguyen</h1>
-                    <p>I'm a Software Engineering student at the University of Waterloo. I have great interest in developing and learning about software. Outside of classes, I usually spend time learning about software development, programming languages and photography.</p>
-                    <p></p>
-                    <p></p>
+                    <h1>Contact</h1>
+                    <p>Get in touch with me.</p>
                 </div>
             </div>
         </div>
     </div>
     
-    <div class="showcase">
+    <div class="contact">
         <div class="container">
             <ul>
-                <li><a href="projects.html"><img src="assets/projects.png">Projects</a></li>
-                <li><a href="photography.html"><img src="assets/photo.png">Photography</a></li>
-                <li><a href="contact.html"><img src="assets/contact.png">Contact</a></li>
-                <li><a href="assets/resume.pdf"><img src="assets/resume.png">Resume</a></li>
-                <li><a href="about.html"><img src="assets/about.png">About</a></li>
+                <li><a href="mailto:nhat.nguyen@uwaterloo.ca"><img src="assets/icons/mail.png">Email</a></li>
+                <li><a href="https://github.com/nhat-nguyen"><img src="assets/icons/github.png">GitHub</a></li>
+                <li><a href="assets/resume.pdf"><img src="assets/icons/resume.png">Resume</a></li>
             </ul>
         
         </div>
