--- a/index.html
+++ b/index.html
@@ -50,9 +50,11 @@
                     <li>
                         <a href="photography.html">Photography</a>
                     </li>
+<!--
                     <li>
                         <a href="about.html">About</a>
                     </li>
+-->
                     <li>
                         <a href="contact.html">Contact</a>
                     </li>
@@ -80,11 +82,11 @@
     <div class="showcase">
         <div class="container">
             <ul>
-                <li><a href="projects.html"><img src="assets/projects.png">Projects</a></li>
-                <li><a href="photography.html"><img src="assets/photo.png">Photography</a></li>
-                <li><a href="contact.html"><img src="assets/contact.png">Contact</a></li>
-                <li><a href="assets/resume.pdf"><img src="assets/resume.png">Resume</a></li>
-                <li><a href="about.html"><img src="assets/about.png">About</a></li>
+                <li><a href="projects.html"><img src="assets/icons/projects.png">Projects</a></li>
+                <li><a href="photography.html"><img src="assets/icons/photo.png">Photography</a></li>
+                <li><a href="contact.html"><img src="assets/icons/contact.png">Contact</a></li>
+                <li><a href="assets/resume.pdf"><img src="assets/icons/resume.png">Resume</a></li>
+<!--                <li><a href="about.html"><img src="assets/about.png">About</a></li>-->
             </ul>
         
         </div>
