--- a/projects.html
+++ b/projects.html
@@ -17,6 +17,8 @@
     <!-- Custom CSS -->
     <link href="css/main.css" rel="stylesheet">
 
+    <link href="css/showcase.css" rel="stylesheet">
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -50,9 +52,11 @@
                     <li>
                         <a href="photography.html">Photography</a>
                     </li>
+<!--
                     <li>
                         <a href="about.html">About</a>
                     </li>
+-->
                     <li>
                         <a href="contact.html">Contact</a>
                     </li>
@@ -62,16 +66,49 @@
         </div>
         <!-- /.container -->
     </nav>
-
-    <!-- Page Content -->
     <div class="header">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 col-sm-12">
-                    <h1>Nhat Nguyen</h1>
-                    <p>I'm a Software Engineering student at the University of Waterloo. I have great interest in developing and learning about software. Outside of classes, I usually spend time learning about software development, programming languages and photography.</p>
-                    <p></p>
-                    <p></p>
+                    <h1>Projects</h1>
+                    <p>Little things that I do in my free time. There will be moreeee! :)</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Page Content -->
+    <div class="gallery">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="thumbnail">
+                      <img src="assets/screenshots/kirby.png">
+                      <div class="caption">
+                        <h3>Kirby</h3>
+                          <h5>My very first project. It was written in python & pygame. The player need to avoid the falling rockets using various abilities Kirby has.</h5>
+                          <a href="https://github.com/nhat-nguyen/kirby" target="_blank" type="button" class="btn btn-primary btn-block">Source Code - GitHub</a>
+                      </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="thumbnail">
+                      <img src="assets/screenshots/pycalculator.png">
+                      <div class="caption">
+                          <h3>PyCalculator</h3>
+                          <h5>A calculator that can handle fully natural arithmetic expressions with the help of a self-implemented and improved shunting-yard algorithm.</h5>
+                          <a href="https://github.com/nhat-nguyen/pycalculator" target="_blank" type="button" class="text-center btn btn-primary btn-block">GitHub</a>
+                      </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="thumbnail">
+                      <img src="assets/screenshots/bittersweet.png">
+                      <div class="caption">
+                          <h3>Bittersweet</h3>
+                          <h5>A dark, tasty, colorful  and easy-to-the-eye colorscheme for Sublime Text. It was roughly based on the Dracula theme by zenorocha.</h5>
+                          <a href="https://github.com/nhat-nguyen/bittersweet" target="_blank" type="button" class="text-center btn btn-primary btn-block">GitHub</a>
+                      </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -80,11 +117,11 @@
     <div class="showcase">
         <div class="container">
             <ul>
-                <li><a href="projects.html"><img src="assets/projects.png">Projects</a></li>
-                <li><a href="photography.html"><img src="assets/photo.png">Photography</a></li>
-                <li><a href="contact.html"><img src="assets/contact.png">Contact</a></li>
-                <li><a href="assets/resume.pdf"><img src="assets/resume.png">Resume</a></li>
-                <li><a href="about.html"><img src="assets/about.png">About</a></li>
+                <li><a href="projects.html"><img src="assets/icons/projects.png">Projects</a></li>
+                <li><a href="photography.html"><img src="assets/icons/photo.png">Photography</a></li>
+                <li><a href="contact.html"><img src="assets/icons/contact.png">Contact</a></li>
+                <li><a href="assets/resume.pdf"><img src="assets/icons/resume.png">Resume</a></li>
+<!--                <li><a href="about.html"><img src="assets/about.png">About</a></li>-->
             </ul>
         
         </div>
