--- a/projects.html
+++ b/projects.html
@@ -52,13 +52,12 @@
                     <li>
                         <a href="photography.html">Photography</a>
                     </li>
-<!--
-                    <li>
-                        <a href="about.html">About</a>
-                    </li>
--->
+
                     <li>
                         <a href="contact.html">Contact</a>
+                    </li>
+                    <li>
+                        <a href="assets/resume.pdf">Resume</a>
                     </li>
                 </ul>
             </div>
