--- a/contact.html
+++ b/contact.html
@@ -52,14 +52,16 @@
                     <li>
                         <a href="photography.html">Photography</a>
                     </li>
-<!--
-                    <li>
-                        <a href="about.html">About</a>
                     </li>
--->
+
                     <li>
                         <a href="contact.html">Contact</a>
                     </li>
+                
+                    <li>
+                        <a href="assets/resume.pdf">Resume</a>
+                    </li>
+                
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
