--- a/projects.html
+++ b/projects.html
@@ -95,7 +95,7 @@
                       <div class="caption">
                           <h3>PyCalculator</h3>
                           <h5>A calculator that can handle fully natural arithmetic expressions with the help of a self-implemented and improved shunting-yard algorithm.</h5>
-                          <a href="https://github.com/nhat-nguyen/pycalculator" target="_blank" type="button" class="text-center btn btn-primary btn-block">GitHub</a>
+                          <a href="https://github.com/nhat-nguyen/pycalculator" target="_blank" type="button" class="text-center btn btn-primary btn-block">Source Code - GitHub</a>
                       </div>
                     </div>
                 </div>
@@ -105,7 +105,7 @@
                       <div class="caption">
                           <h3>Bittersweet</h3>
                           <h5>A dark, tasty, colorful  and easy-to-the-eye colorscheme for Sublime Text. It was roughly based on the Dracula theme by zenorocha.</h5>
-                          <a href="https://github.com/nhat-nguyen/bittersweet" target="_blank" type="button" class="text-center btn btn-primary btn-block">GitHub</a>
+                          <a href="https://github.com/nhat-nguyen/bittersweet" target="_blank" type="button" class="text-center btn btn-primary btn-block">Source Code - GitHub</a>
                       </div>
                     </div>
                 </div>
