--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="row">
                 <div class="col-md-12 col-sm-12">
                     <h1>Nhat Nguyen</h1>
-                    <p>I'm a Software Engineering student at the University of Waterloo. I have great interest in developing and learning about software. Outside of classes, I usually spend time learning about software development, programming languages and photography.</p>
+                    <p>I'm a Software Engineering student at the University of Waterloo. I have great interest in software and how they work. Outside of classes, I usually spend time learning about software development, programming languages and photography.</p>
                     <p></p>
                     <p></p>
                 </div>
