changed wordings, increased font weight

--- a/photography.html
+++ b/photography.html
@@ -81,7 +81,7 @@
     
     <div class="photos">
         <div class="container">
-            <p>You can browse through my gallery at (there will be more to comee! :D):</p>
+            <p>You can browse through my gallery at:</p>
             <ul>
                 <li><a href="https://500px.com/nhat-nguyen"><img src="assets/icons/500px.png" target="_blank">500px</a></li>
                 <li><a href="http://hoangnhat1996.deviantart.com" target="_blank"><img src="assets/icons/deviantart.png">deviantART</a></li>
