--- a/projects.html
+++ b/projects.html
@@ -70,7 +70,7 @@
             <div class="row">
                 <div class="col-md-12 col-sm-12">
                     <h1>Projects</h1>
-                    <p>Little things that I do in my free time. There will be moreeee! :)</p>
+                    <p>Little things that I do in my free time.</p>
                 </div>
             </div>
         </div>
