--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html class="full" lang="en">
-<!-- Make sure the <html> tag is set to the .full CSS class. Change the background image in the full.css file. -->
 
 <head>
     <meta charset="utf-8">
@@ -25,7 +24,6 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
 </head>
 
 <body>
@@ -33,7 +31,6 @@
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
         <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
@@ -43,34 +40,22 @@
                 </button>
                 <a class="navbar-brand" href="index.html">Home</a>
             </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li>
-                        <a href="projects.html">Projects</a>
-                    </li>
-                    <li>
-                        <a href="photography.html">Photography</a>
-                    </li>
-
-                    <li>
-                        <a href="contact.html">Contact</a>
-                    </li>
-                    <li>
-                        <a href="assets/resume.pdf">Resume</a>
-                    </li>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="photography.html">Photography</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="assets/resume.pdf">Resume</a></li>
                 </ul>
             </div>
-            <!-- /.navbar-collapse -->
         </div>
-        <!-- /.container -->
     </nav>
     <div class="header">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 col-sm-12">
                     <h1>Projects</h1>
-                    <p>Little things that I do in my free time.</p>
+                    <p>(Some of the) little things that I do in my free time.</p>
                 </div>
             </div>
         </div>
@@ -110,6 +95,53 @@
                     </div>
                 </div>
             </div>
+
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="thumbnail">
+                      <img src="assets/screenshots/sereny.png">
+                      <div class="caption">
+                        <h3>Sereny</h3>
+                          <h5>A little timer web-app that utilizes some material-design ideas. Written in Javascript, CSS with the help of some open source library like: animate.css,...</h5>
+                          <a href="https://github.com/nhat-nguyen/sereny" target="_blank" type="button" class="btn btn-primary btn-block">Source Code - GitHub</a>
+                      </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="thumbnail">
+                      <img src="assets/screenshots/matrix.png">
+                      <div class="caption">
+                          <h3>Matrix.js</h3>
+                          <h5>A web-app to help me with my linear algebra course. All mathematical functions were self-implemented in Javascript. The framework used is AngularJS.</h5>
+                          <a href="https://github.com/nhat-nguyen/matrix.js" target="_blank" type="button" class="text-center btn btn-primary btn-block">Source Code - GitHub</a>
+                      </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="thumbnail">
+                      <img src="assets/screenshots/friends.png">
+                      <div class="caption">
+                          <h3>Friends</h3>
+                          <h5>A dashboard to glance at some general information about the places my friends live. Uses Google Places APIs for cities autocompletion. (work in progress)</h5>
+                          <a href="https://github.com/nhat-nguyen/friends" target="_blank" type="button" class="text-center btn btn-primary btn-block">Source Code - GitHub</a>
+                      </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="thumbnail">
+                      <img src="assets/screenshots/lines.png">
+                      <div class="caption">
+                        <h3>Color-Lines</h3>
+                          <h5>An implementation of the classic color-lines game. Used phaser.io game framework. Written in Javascript.</h5>
+                          <a href="https://github.com/nhat-nguyen/color-lines" target="_blank" type="button" class="btn btn-primary btn-block">Source Code - GitHub</a>
+                      </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     
@@ -120,7 +152,6 @@
                 <li><a href="photography.html"><img src="assets/icons/photo.png">Photography</a></li>
                 <li><a href="contact.html"><img src="assets/icons/contact.png">Contact</a></li>
                 <li><a href="assets/resume.pdf"><img src="assets/icons/resume.png">Resume</a></li>
-<!--                <li><a href="about.html"><img src="assets/about.png">About</a></li>-->
             </ul>
         
         </div>
