--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,17 @@
                 <li><a href="https://github.com/nhat-nguyen"><img src="assets/icons/github.png">GitHub</a></li>
                 <li><a href="assets/resume.pdf"><img src="assets/icons/resume.png">Resume</a></li>
             </ul>
-        
+        </div>
+    </div>
+
+    <div class="showcase footer">
+        <div class="container">
+            <ul>
+                <li><a href="projects.html"><img src="assets/icons/projects.png">Projects</a></li>
+                <li><a href="photography.html"><img src="assets/icons/photo.png">Photography</a></li>
+                <li><a href="contact.html"><img src="assets/icons/contact.png">Contact</a></li>
+                <li><a href="assets/resume.pdf"><img src="assets/icons/resume.png">Resume</a></li>
+            </ul>
         </div>
     </div>
 
