--- a/index.html
+++ b/index.html
@@ -79,16 +79,14 @@
         </div>
     </div>
     
-    <div class="showcase">
+    <div class="showcase footer">
         <div class="container">
             <ul>
                 <li><a href="projects.html"><img src="assets/icons/projects.png">Projects</a></li>
                 <li><a href="photography.html"><img src="assets/icons/photo.png">Photography</a></li>
                 <li><a href="contact.html"><img src="assets/icons/contact.png">Contact</a></li>
                 <li><a href="assets/resume.pdf"><img src="assets/icons/resume.png">Resume</a></li>
-<!--                <li><a href="about.html"><img src="assets/about.png">About</a></li>-->
             </ul>
-        
         </div>
     </div>
 
