--- a/photography.html
+++ b/photography.html
@@ -90,7 +90,7 @@
         </div>
     </div>
     
-    <div class="showcase">
+    <div class="showcase footer">
         <div class="container">
             <ul>
                 <li><a href="projects.html"><img src="assets/icons/projects.png">Projects</a></li>
