--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
 
     <!-- Custom CSS -->
     <link href="css/main.css" rel="stylesheet">
-
+    <link href="css/photography.css" rel="stylesheet">
     <link href="css/showcase.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -70,7 +70,7 @@
                       <div class="caption">
                         <h3>Kirby</h3>
                           <h5>My very first project. It was written in python & pygame. The player need to avoid the falling rockets using various abilities Kirby has.</h5>
-                          <a href="https://github.com/nhat-nguyen/kirby" target="_blank" type="button" class="btn btn-primary btn-block">Source Code - GitHub</a>
+                          <a href="https://github.com/nhat-nguyen/kirby" target="_blank" type="button" class="btn btn-primary btn-block">GitHub</a>
                       </div>
                     </div>
                 </div>
@@ -80,7 +80,7 @@
                       <div class="caption">
                           <h3>PyCalculator</h3>
                           <h5>A calculator that can handle fully natural arithmetic expressions with the help of a self-implemented and improved shunting-yard algorithm.</h5>
-                          <a href="https://github.com/nhat-nguyen/pycalculator" target="_blank" type="button" class="text-center btn btn-primary btn-block">Source Code - GitHub</a>
+                          <a href="https://github.com/nhat-nguyen/pycalculator" target="_blank" type="button" class="text-center btn btn-primary btn-block">GitHub</a>
                       </div>
                     </div>
                 </div>
@@ -90,7 +90,7 @@
                       <div class="caption">
                           <h3>Bittersweet</h3>
                           <h5>A dark, tasty, colorful  and easy-to-the-eye colorscheme for Sublime Text. It was roughly based on the Dracula theme by zenorocha.</h5>
-                          <a href="https://github.com/nhat-nguyen/bittersweet" target="_blank" type="button" class="text-center btn btn-primary btn-block">Source Code - GitHub</a>
+                          <a href="https://github.com/nhat-nguyen/bittersweet" target="_blank" type="button" class="text-center btn btn-primary btn-block">GitHub</a>
                       </div>
                     </div>
                 </div>
@@ -103,7 +103,7 @@
                       <div class="caption">
                         <h3>Sereny</h3>
                           <h5>A little timer web-app that utilizes some material-design ideas. Written in Javascript, CSS with the help of some open source library like: animate.css,...</h5>
-                          <a href="https://github.com/nhat-nguyen/sereny" target="_blank" type="button" class="btn btn-primary btn-block">Source Code - GitHub</a>
+                          <a href="https://github.com/nhat-nguyen/sereny" target="_blank" type="button" class="btn btn-primary btn-block">GitHub</a>
                       </div>
                     </div>
                 </div>
@@ -113,7 +113,7 @@
                       <div class="caption">
                           <h3>Matrix.js</h3>
                           <h5>A web-app to help me with my linear algebra course. All mathematical functions were self-implemented in Javascript. The framework used is AngularJS.</h5>
-                          <a href="https://github.com/nhat-nguyen/matrix.js" target="_blank" type="button" class="text-center btn btn-primary btn-block">Source Code - GitHub</a>
+                          <a href="https://github.com/nhat-nguyen/matrix.js" target="_blank" type="button" class="text-center btn btn-primary btn-block">GitHub</a>
                       </div>
                     </div>
                 </div>
@@ -123,7 +123,7 @@
                       <div class="caption">
                           <h3>Friends</h3>
                           <h5>A dashboard to glance at some general information about the places my friends live. Uses Google Places APIs for cities autocompletion. (work in progress)</h5>
-                          <a href="https://github.com/nhat-nguyen/friends" target="_blank" type="button" class="text-center btn btn-primary btn-block">Source Code - GitHub</a>
+                          <a href="https://github.com/nhat-nguyen/friends" target="_blank" type="button" class="text-center btn btn-primary btn-block">GitHub</a>
                       </div>
                     </div>
                 </div>
@@ -137,7 +137,7 @@
                       <div class="caption">
                         <h3>Color-Lines</h3>
                           <h5>An implementation of the classic color-lines game. Used phaser.io game framework. Written in Javascript.</h5>
-                          <a href="https://github.com/nhat-nguyen/color-lines" target="_blank" type="button" class="btn btn-primary btn-block">Source Code - GitHub</a>
+                          <a href="https://github.com/nhat-nguyen/color-lines" target="_blank" type="button" class="btn btn-primary btn-block">GitHub</a>
                       </div>
                     </div>
                 </div>
