changed footer on project page

--- a/projects.html
+++ b/projects.html
@@ -145,7 +145,7 @@
         </div>
     </div>
     
-    <div class="showcase footer">
+    <div class="showcase">
         <div class="container">
             <ul>
                 <li><a href="projects.html"><img src="assets/icons/projects.png">Projects</a></li>
@@ -153,7 +153,6 @@
                 <li><a href="contact.html"><img src="assets/icons/contact.png">Contact</a></li>
                 <li><a href="assets/resume.pdf"><img src="assets/icons/resume.png">Resume</a></li>
             </ul>
-        
         </div>
     </div>
 
